--- a/ClothesForecast/app/src/main/res/layout/activity_main.xml
+++ b/ClothesForecast/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,28 +20,39 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="7"
-            android:hint="City Name"/>
+            android:hint="City Name" />
 
         <Button
             android:id="@+id/btnFetch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="FETCH"/>
+            android:text="FETCH" />
 
     </LinearLayout>
 
-    <ScrollView android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@id/llRequestParameters">
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_below="@id/llRequestParameters">
 
         <TextView
             android:id="@+id/tvResponse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:overScrollMode="always"
-            android:text="Hello World!"/>
+            android:text="Hello World!" />
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/btn_show_weather"
+        android:layout_centerHorizontal="true"
+        android:onClick="Show_weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/scrollView"
+        android:text="@string/show_weather" />
 
 </RelativeLayout>
