--- a/ClothesForecast/app/src/main/res/layout/activity_main.xml
+++ b/ClothesForecast/app/src/main/res/layout/activity_main.xml
@@ -14,21 +14,36 @@
         android:id="@+id/llRequestParameters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/etCityName"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
-            android:hint="City Name"/>
+            android:hint="Enter City Name"/>
 
-        <Button
-            android:id="@+id/btnFetch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="FETCH"/>
+        <LinearLayout style="?android:attr/buttonBarStyle"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+
+            <Button android:id="@+id/btn_fetch_weather"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="onButtonClick"
+                    android:text="Weather"/>
+
+            <Button android:id="@+id/btn_fetch_forecast"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="onButtonClick"
+                    android:text="Forecast"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -36,12 +51,25 @@
                 android:layout_height="match_parent"
                 android:layout_below="@id/llRequestParameters">
 
-        <TextView
-            android:id="@+id/tvResponse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:overScrollMode="always"
-            android:text="Hello World!"/>
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
+
+            <ProgressBar android:id="@+id/progress_bar"
+                         style="@android:style/Widget.ProgressBar.Small"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_gravity="center"
+                         android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/tvResponse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:overScrollMode="always"
+                android:text="Hello World!"/>
+
+        </LinearLayout>
 
     </ScrollView>
 
