--- a/ClothesForecast/app/src/main/res/values/dimens.xml
+++ b/ClothesForecast/app/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
     <dimen name="activity_horizontal_margin_4">4dp</dimen>
     <dimen name="activity_horizontal_margin_8">8dp</dimen>
     <dimen name="activity_horizontal_margin_16">16dp</dimen>
