another little change

--- a/ClothesForecast/app/src/main/res/layout/activity_main.xml
+++ b/ClothesForecast/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="Show_weather"
+        android:onClick="showWeather"
         android:text="@string/show_weather"/>
 
     <ScrollView
